# rvault

./: .gitignore  404.html  Cargo.toml  Cargo.toml.bak  LICENSE-MIT.MD  README.md  dist-workspace.toml  index.html  package.json  pnpm-lock.yaml  rvault-v0.1.1-demo.webm  svelte.config.js
crates/rvault-cli/: Cargo.toml  cli.rs  main.rs
crates/rvault-cli/wix/: main.wxs
crates/rvault-core/: Cargo.toml  config.rs  crypto.rs  keystore.rs  lib.rs  session.rs  storage.rs  vault.rs
crates/rvault-gui/: Cargo.toml  build.rs  main.rs  main.slint  session_timeout_view.slint  setup_view.slint  unlock_view.slint  vault_list_view.slint
crates/rvault-gui/wix/: main.wxs
crates/rvault-tui/: Cargo.toml
crates/rvault-tui/src/: app.rs  input.rs  lib.rs  ui.rs
crates/rvault-tui/wix/: main.wxs
internal/: version.json
internal/immutable/assets/: 0.8CQ7BigP.css  0.BZopbINN.css  0.CaMHGIll.css  2.GXPQk4cD.css
internal/immutable/chunks/: BM0l1Dw1.js  BZEwyoeI.js  BqcXMW_r.js  C1p02swY.js  C43j998E.js  C8FMlZAj.js  CZVbWv0h.js  CzewQ-MH.js  DrWHfk4J.js  DzfDGnEE.js  UBJD9DpG.js  _bzmCZr7.js  _hLLT4DJ.js  eRYUrfL0.js
internal/immutable/entry/: app.BeYY_ByS.js  app.CDqXdHI_.js  app.CUZq7eIY.js  app.CpMIpWVj.js  app.D2XjZYFS.js  app.thLesuXL.js  start.BJgQ5UN9.js  start.CYmIK-KJ.js  start.D3-wMjrO.js  start.arVzRg6t.js  start.i8wZBUsF.js  start.u8TeOJZM.js
internal/immutable/nodes/: 0.Ctzg3iRb.js  0.DFtOInqF.js  1.B-iayYTy.js  1.CjuZpj4i.js  1.D2hGKEC_.js  1.DK83Dlsp.js  1.DjkubVMo.js  1.gSEhlUB7.js  2.BrsWqDXe.js  2.D3rJ_heP.js  2.DtX96dXO.js  2.VjQ_4XdG.js
src/: account.rs  cli.rs  clipboard.rs  config.rs  crypto.rs  error.rs  keystore_bin.rs  main.rs  storage.rs  vault.rs
src/lib/components/: FeatureCard.svelte  Features.svelte  Footer.svelte  Installation.svelte  TUIShowcase.svelte
src/routes/: +page.svelte  layout.css
wix/: main.wxs
