[workspace]

members = [
"crates/rvault-core",
"crates/rvault-cli",
"crates/rvault-gui",
]

[workspace.package]
version = "0.0.5"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atasesli/rvault"
authors = ["Ata Sesli"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
