[workspace]
resolver = "3"
members = [
"crates/rvault-core",
"crates/rvault-cli",
"crates/rvault-tui",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ata-sesli/rvault"
authors = ["Ata Sesli"]
description = "A modern, secure, and cross-platform password manager"
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package."*"]
debug = 0           # Turn off debug info for all dependencies
opt-level = 3       # Maximize optimization for dependencies (makes app run faster too)
