[package]
name = "rvault-gui"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "F9BC7483-4108-4E74-A815-5BFAE33AD322"
path-guid = "8DFE4B34-539E-425A-9DD8-D90CB5524FA8"
license = false
eula = false

[[bin]]
name = "grvault"
path = "main.rs"

[dependencies]
rvault-core = { path = "../rvault-core" }
slint = "1.13.1"

[build-dependencies]
slint-build = "1.13.1"
